welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: not found: value hauteur
	for (i <- 0 to hauteur )
                       ^Array1:42: error: Unit does not take parameters
 		getMotif();
                        ^