welcome.lessons.welcome.array.basics.Array1.scala.code
def getMotif
{
	for (i <- 0 to hauteur )
		{
	  	setCouleurBrosse(T(i))
		baisseBrosse()
		leveBrosse()
		avance();
 		
		}
}
override def run() 
{
	def getMotif
{
	for (i <- 0 to hauteur )
		{
	  	setCouleurBrosse(T(i))
		baisseBrosse()
		leveBrosse()
		avance();
 		
		}
}
var hauteur: Int= getMondeHauteur()
var largeur: Int= getMondeLargeur()
var T = new Array[Color](hauteur)

for (k <- 0 to (hauteur-1))
	{
		avance();
		T(k)=getCouleurSol() ;
	} 
	for (j<- 0 to largeur)
	{	 
		gauche();
 		avance();
 		droite();
 		avance();
 		avance();
 		getMotif();

	}	
		
}



